# cpposmui

./: .clangd  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  SKILLS.md  build.bat  build_native.bat  imgui.ini  vcpkg.json
src/: log.hpp  main.cpp
src/ai/: detection.cpp  detection.hpp
src/map/: tile_cache.cpp  tile_cache.hpp
src/net/: http.cpp  http.hpp  oauth.cpp  oauth.hpp  osm_upload.cpp  osm_upload.hpp  overpass.cpp  overpass.hpp  sha256.hpp
src/osm/: data_layer.hpp  diff.cpp  diff.hpp  parser.cpp  parser.hpp  spatial_index.cpp  spatial_index.hpp  tag_presets.hpp  types.hpp
src/ui/: detection_panel.cpp  detection_panel.hpp  diff_panel.cpp  diff_panel.hpp  map_view.cpp  map_view.hpp  overpass_panel.cpp  overpass_panel.hpp  tag_editor.cpp  tag_editor.hpp
tests/: CMakeLists.txt  stb_impl.cpp  test_detection.cpp  test_diff.cpp  test_overpass.cpp  test_parser.cpp  test_spatial.cpp
tests/data/: changes.osc  simple.osm
